# sc-fleet-manager-v2

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
docs/: Cargo-Routes-Conception.md  (+5 more)
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_ship.sql  0002_ship_data.sql  0003_loadout.sql  0004_ccu.sql  0005_pledges.sql  0006_missions.sql  0007_blueprints.sql  0008_settings.sql  0009_scopes_seed.sql  0010_notifications.sql  0011_blueprint_slots.sql  0012_blueprint_item_meta.sql  0013_blueprint_description_data.sql  0014_cargo_reference.sql  0015_cargo_prices.sql  0016_cargo_alias_typo.sql  0017_component_qt_accel.sql  0018_uex_prices.sql  0019_drop_cargo_price_listing.sql  0020_ship_acquisition.sql  0021_starmap_wiki.sql  0022_item_catalog.sql  0023_loadout_hierarchy.sql  0024_loadout_turret_type.sql  0025_acquisition_indexes.sql  0026_shiphardpoint_default_index.sql  0027_component_qt_fuel_per_gm.sql  0028_rsi_news.sql  0029_gamelog.sql  0030_trade_journal.sql  0031_starmap_rsi.sql  0032_rsi_news_image.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: account.rs  app_meta.rs  auth.rs  cargo_grid.rs  cargo_routes.rs  catalog.rs  ccu_chain.rs  comparator.rs  crafting_hub.rs  dashboard.rs  datamining.rs  datamining_extract.rs  dev.rs  fleet.rs  gamelog.rs  hangar_exec.rs  insurance.rs  loadout.rs  missions.rs  mod.rs  news.rs  notifications.rs  overlay.rs  patch_detect.rs  rsi_scrape.rs  rsi_status.rs  settings.rs  shopping_route.rs  starjump.rs  trade_journal.rs  travel_physics.rs  uex.rs  wiki_sync.rs
(+108 files in other folders)
